# jadasql

./: .gitignore  CMakeLists.txt  README.md  main.cpp
error/: Error.cpp  Error.h
include/data/: DatabaseStructure.h  InformationSchemaLine.h  InsertableField.h  InsertableRow.h  TableStructure.h
include/error/: Error.h
include/index/: Node.hpp  UniqueIndex.hpp
include/interpreter/: ExecutionData.h  ReturnedValue.h
include/interpreter/values/: ReturnedBool.h  ReturnedNumber.h  ReturnedRowCount.h  ReturnedRowData.h  ReturnedString.h
include/lexer/symbol/keyword/: DataTypeSymbol.h  KeywordSymbol.h  OperatorSymbol.h  StatementSymbol.h
include/lexer/symbol/value/: IdentifierSymbol.h
include/parser/: Parser.h
include/parser/tree/assign/: Assign.h
include/parser/tree/column_actions/: ColumnConstraints.h  ColumnCreationInfo.h  ColumnDetail.h  ColumnModification.h
include/parser/tree/datatype/: Boolean.h  Char.h  DataType.h  Date.h  DateTime.h  Double.h  Float.h  Int.h  Timestamp.h  TinyInt.h  VarChar.h
include/parser/tree/field/: ConstNumberField.h  ConstStringField.h  Field.h  NullField.h
include/parser/tree/from/: From.h  Joint.h
include/parser/tree/function/: AvgFunction.h  CoalesceFunction.h  ConcatFunction.h  CountFunction.h  FormatFunction.h  IfNullFunction.h  LeftFunction.h  MaxFunction.h  MinFunction.h  RightFunction.h  SumFunction.h
include/parser/tree/operation/: Operation.h  OperationPriority.h
include/parser/tree/statements/: AlterStatement.h  CreateStatement.h  DeleteStatement.h  DropStatement.h  InsertStatement.h  SelectStatement.h  ShowStatement.h  UpdateStatement.h  UseStatement.h
include/parser/tree/structure/: ColumnReference.h  DatabaseReference.h  TableReference.h
include/parser/tree/tree_item/: TreeItem.h
include/utils/: Comparable.hpp  instanceof.hpp
lexer/: Lexer.cpp  Lexer.h
lexer/symbol/: Group.h  IdentifierSymbolValue.h  NumberSymbolValue.h  StringSymbolValue.h  Symbol.h  SymbolValue.h
lexer/symbol/keyword/: DataTypeKeyword.h  DataTypeSymbol.h  DelimiterKeyword.h  DelimiterSymbol.h  Dictionary.cpp  Keyword.h  KeywordSymbol.h  OperatorKeyword.h  OperatorSymbol.h  StatementKeyword.h  StatementSymbol.h
lexer/symbol/value/: IdentifierSymbol.h  NumberSymbol.h  StringSymbol.h
list/: List.h  Node.h
parser/: Group.h  Lexer.cpp  Lexer.h  LexicalScanner.cpp  LexicalScanner.h  Parser.cpp  Parser.h  Symbol.h
parser/tree/alter/: ColumnModification.cpp  ColumnModification.h
parser/tree/assign/: Assign.cpp  Assign.h
parser/tree/column_actions/: ColumnConstraints.cpp  ColumnConstraints.h  ColumnCreationInfo.cpp  ColumnDetail.cpp  ColumnDetail.h  ColumnModification.cpp  ColumnModification.h
parser/tree/condition/: Condition.cpp  Condition.h  LogicalKeyword.h  OperationPriority.h
parser/tree/datatype/: Boolean.h  Char.h  DataType.cpp  DataType.h  Date.h  DateTime.h  Double.h  Float.h  Int.h  Timestamp.h  TinyInt.h  VarChar.h
parser/tree/expression/: Expression.h
parser/tree/field/: ConstNumberField.h  ConstStringField.h  Field.cpp  Field.h  NullField.h
parser/tree/from/: From.cpp  From.h  Joint.cpp  Joint.h
parser/tree/function/: AvgFunction.h  CoalesceFunction.h  ConcatFunction.h  CountFunction.h  FormatFunction.h  Function.cpp  Function.h  FunctionField.cpp  FunctionField.h  IfNullFunction.h  LeftFunction.h  MaxFunction.h  MinFunction.h  RightFunction.h  SumFunction.h
parser/tree/operation/: Operation.cpp  Operation.h  OperationPriority.h
parser/tree/statements/: AlterStatement.cpp  AlterStatement.h  CreateStatement.cpp  CreateStatement.h  DeleteStatement.cpp  DeleteStatement.h  DropStatement.cpp  DropStatement.h  InsertStatement.cpp  InsertStatement.h  SelectStatement.cpp  SelectStatement.h  Statement.cpp  Statement.h  UpdateStatement.cpp  UpdateStatement.h
parser/tree/structure/: ColumnReference.h  DatabaseReference.h  Reference.cpp  TableReference.h
parser/tree/tree_item/: TreeItem.h  TreeItemDisplay.cpp
server/: server.cpp  server.h
sql/from/: FromClause.h
sql/joint/: InnerJoin.h
sql/parser/: SqlFieldListParser.h  SqlStatementParser.h  StringParser.h
sql/statement/: SelectStatement.h  SqlStatement.h
sql/structure/: Database.h  Field.h
sql/where/: Expression.h
src/data/: DatabaseStructure.cpp  InformationSchemaLine.cpp  InsertableField.cpp  InsertableRow.cpp  TableStructure.cpp
src/error/: Error.cpp
src/index/: UniqueIndex.cpp
src/interpreter/: ReturnedValue.cpp
src/interpreter/values/: ReturnedBool.cpp  ReturnedNumber.cpp  ReturnedRowCount.cpp  ReturnedRowData.cpp  ReturnedString.cpp
src/lexer/: Lexer.cpp
src/parser/: Parser.cpp
src/parser/assign/: Assign.cpp
src/parser/column_actions/: ColumnConstraints.cpp  ColumnCreationInfo.cpp  ColumnDetail.cpp  ColumnModification.cpp
src/parser/datatype/: DataType.cpp
src/parser/field/: Field.cpp
src/parser/from/: From.cpp  Joint.cpp
src/parser/function/: Function.cpp
src/parser/operation/: Operation.cpp
src/parser/statements/: AlterStatement.cpp  CreateStatement.cpp  DeleteStatement.cpp  DropStatement.cpp  InsertStatement.cpp  SelectStatement.cpp  ShowStatement.cpp  Statement.cpp  UpdateStatement.cpp  UseStatement.cpp
src/parser/structure/: Reference.cpp
src/parser/tree_item/: TreeItemDisplay.cpp
string/: StringCase.h
tree/from/: FromClause.h
tree/group/: GroupClause.h
tree/joint/: InnerJoin.h  Joint.h  LeftJoin.h  RightJoin.h
tree/statement/: SelectStatement.h  SqlStatement.h
tree/structure/: Database.h  Field.h  Table.h
tree/where/: CompareEnum.h  Expression.h  WhereClause.h
(+33 files in other folders)
